package com.lattix.auth.domain;

import java.time.Instant;
import java.util.UUID;

public record User(
        UUID id,
        String email,
        String displayName,
        UserStatus status,
        Instant createdAt,
        Instant lastLoginAt) {
}
